--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<img src="/images/logo.svg" alt="" class="clipboard__logo">
 
-		<section class="clipboard__download-section">
+		<article class="clipboard__download-section">
 			<h1>A history of everything you copy</h1>
 			<p>
 				Clipboard allows you to track and organize everything you
@@ -30,18 +30,18 @@
 				<button class="download-section--btn-ios">Download for iOS</button>
 				<button class="download-section--btn-mac">Download for Mac</button>
 			</div>
-		</section>
+		</article>
 
-		<section class="clipboard__info-text">
+		<article class="clipboard__info-text">
 			<h2>Keep track of your snippets</h2>
 			<p>
 				Clipboard instantly stores any item you copy in the cloud,
 				meaning you can access your snippets immediately on all your
 				devices. Our Mac and iOS apps will help you organize everything.
 			</p>
-		</section>
+		</article>
 
-		<section class="clipboard__advantages">
+		<article class="clipboard__advantages">
 			<img src="/images/image-computer.png" alt="">
 			<div class="advantages--container">
 				<div class="advantage">
@@ -57,24 +57,24 @@
 					<p>Retrieve any snippets from the first moment you started using the app.</p>
 				</div>
 			</div>
-		</section>
+		</article>
 
-		<section class="clipboard__info-text">
+		<article class="clipboard__info-text">
 			<h2>Access Clipboard anywhere</h2>
 			<p>
 				Whether you’re on the go, or at your computer, you can access all your Clipboard
 				snippets in a few simple clicks.
 			</p>
-		</section>
+		</article>
 
 		<img src="/images/image-devices.png" alt="" class="clipboard__devices-image">
 
-		<section class="clipboard__info-text">
+		<article class="clipboard__info-text">
 			<h2>Supercharge your workflow</h2>
 			<p>We’ve got the tools to boost your productivity.</p>
-		</section>
+		</article>
 		
-		<section class="clipboard__utilities">
+		<article class="clipboard__utilities">
 			<div class="utility">
 				<img src="/images/icon-blacklist.svg" alt="" class="utility-image">
 				<h3>Create blacklists</h3>
@@ -90,17 +90,17 @@
 				<h3>Sneak preview</h3>
 				<p>Quick preview of all snippets on your Clipboard for easy access.</p>
 			</div>
-		</section>
+		</article>
 		
-		<section class="clipboard__sponsors">
+		<article class="clipboard__sponsors">
 			<img src="/images/logo-google.png" alt="Google" class="sponsor">
 			<img src="/images/logo-ibm.png" alt="IBM" class="sponsor">
 			<img src="/images/logo-microsoft.png" alt="Microsoft" class="sponsor">
 			<img src="/images/logo-hp.png" alt="HP" class="sponsor">
 			<img src="/images/logo-vector-graphics.png" alt="Vector Graphics" class="sponsor">
-		</section>
+		</article>
 
-		<section class="clipboard__download-section">
+		<article class="clipboard__download-section">
 			<h2>Clipboard for iOS and Mac OS</h2>
 			<p>
 				Available for free on the App Store. Download for Mac or iOS, sync with iCloud
@@ -110,7 +110,7 @@
 				<button class="download-section--btn-ios">Download for iOS</button>
 				<button class="download-section--btn-mac">Download for Mac</button>
 			</div>
-		</section>
+		</article>
 
 		
 	</main>
