--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 			</div>
 		</article>
 		
-		<article class="clipboard__sponsors">
+		<div class="clipboard__sponsors">
 			<img src="/images/logo-google.png" alt="Google" class="sponsor">
 			<img src="/images/logo-ibm.png" alt="IBM" class="sponsor">
 			<img src="/images/logo-microsoft.png" alt="Microsoft" class="sponsor">
 			<img src="/images/logo-hp.png" alt="HP" class="sponsor">
 			<img src="/images/logo-vector-graphics.png" alt="Vector Graphics" class="sponsor">
-		</article>
+		</div>
 
 		<article class="clipboard__download-section">
 			<h2>Clipboard for iOS and Mac OS</h2>
